Added Projects. Edited Background Colors.

--- a/index.html
+++ b/index.html
@@ -45,35 +45,35 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Experience outside of Web Development.</h2>
+						<p>Bringing real-world experience into Web Development.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments-o"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Networked</h3>
+								<p>I've networked with devs across retail, oil & gas, game development, and many other industires.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Photography</h3> <!--Photography-->
+								<p>Three years experience with DSLR. I know what kind of photos catch the users attention.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+							<section class="box style1"><!--Social Media Marketing-->
 								<span class="icon featured fa-thumbs-o-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Social Media Marketing</h3>
+								<p>I have a year and a half experience of marketing via social media. I can bring this experiece to Web Development because I know what the use wants.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p>Want to see some of my projects?</p>
+						<a href="#portfolio" class="button large scrolly">See what I've developed...</a>
 					</footer>
 				</div>
 			</article>
@@ -82,22 +82,21 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Here's some of my recent projects.</h2>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://shopmiltons.co/" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\miltons.png" alt="" /></a>
+								<h3><a href="#">Miltons</a></h3>
+								<p>Pet Apparel Website</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\upwardIndivudual.png" alt="" /></a>
+								<h3><a href="#">Upward Individual</a></h3>
+								<p>Personal Blog Page</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
