--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<section class="box style1"><!--Social Media Marketing-->
 								<span class="icon featured fa-thumbs-o-up"></span>
 								<h3>Social Media Marketing</h3>
-								<p>I have a year and a half experience of marketing via social media. I can bring this experiece to Web Development because I know what the use wants.</p>
+								<p>I have a year and a half experience of marketing via social media.</p>
 							</section>
 						</div>
 					</div>
@@ -88,59 +88,60 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://shopmiltons.co/" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\miltons.png" alt="" /></a>
-								<h3><a href="#">Miltons</a></h3>
+								<h3><a href="https://shopmiltons.co/">Miltons</a></h3>
 								<p>Pet Apparel Website</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\upwardIndivudual.png" alt="" /></a>
-								<h3><a href="#">Upward Individual</a></h3>
-								<p>Personal Blog Page</p>
+								<a href="https://upwardindividual.com/" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\upwardIndivudual.png" alt="" /></a>
+								<h3><a href="https://upwardindividual.com/">Upward Individual</a></h3>
+								<p>Personal Blog Page<br>In collaboration with Andrew Allen.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small boxNone">
+							 <article class="box style2">
+								<a href="#" class="image featured"><img src="C:\Users\BEN\portfolio-website\images\great idea.png" alt="" /></a>
+								<h3><a href="#">Great Idea Website</a></h3>
+								<p>UI Development</p>
+							</article>
+						<!-- </div>
+						<!-- <div class="col-4 col-6-medium col-12-small boxNone">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
+								<a href="https://www.heb.com/" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<h3><a href="https://www.heb.com/">H-E-B Grocery Company</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small boxNone">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Feugiat aliquam</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small boxNone">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
+						</div> --> 
+					<!-- </div> -->
+					
 				</div>
+				<footer>
+					<p>Want to know more about my professional career?</p>
+					<a href="#contact" class="button large scrolly">Get in touch with me</a>
+				</footer>
 			</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Enter your information below.</h2>
+						<p>I usually respond within 2-3 business days.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -171,13 +172,13 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://twitter.com/UpwardIndivid" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
+								<!-- <li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> --> 
+								<li><a href="https://github.com/allenben746" class="icon fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
@@ -195,7 +196,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; <!---Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</div>
